# Task-Manager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_RU.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_tasklabelthrough_task_label.py  0002_initial.py  0003_alter_task_author_alter_task_executor.py  0003_alter_task_executor_alter_task_label.py  0004_rename_label_task_labels.py  0005_alter_task_author_alter_task_executor_and_more.py
task_manager/templates/: 404.html  500.html  base.html  index.html  login.html
task_manager/templates/crud_parts/: create.html  delete.html  task_read.html  update.html
task_manager/templates/includes/: head.html  nav.html  submit_button.html
task_manager/templates/index_pages/: labels_index.html  statuses_index.html  tasks_index.html  users_index.html
task_manager/templates/statuses/: create.html  delete.html  index.html  statuses_list.html  (+1 more)
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+16 files in other folders)
