[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergei <reyangood@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
whitenoise = "^6.6.0"
django-filter = "^24.2"
django-extensions = "^3.2.3"
rollbar = "^0.16.3"
django-debug-toolbar = "^4.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.4.4"
python-dotenv = "^1.0.1"
pygount = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
